# khqr-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: api_check_account.rs  api_check_transaction.rs  decode_qr.rs  generate_qr.rs  verify_qr.rs
src/: client.rs  config.rs  constants.rs  crc.rs  decoder.rs  error.rs  generator.rs  lib.rs  utils.rs
src/types/: api.rs  individual.rs  merchant.rs  mod.rs  response.rs
tests/: client.rs  config.rs  crc.rs  decoder.rs  utils.rs
